Experiments
Experiment with different viz library, that has fancier graphs.

Experiment with different fold/mapReduce options. What are the speed
differences? Also trying to build fully inferred Pluroids, which are
Monoids for collections that append elements.